--- a/resources/view/templates/partials/forms/create-blog-form.twig
+++ b/resources/view/templates/partials/forms/create-blog-form.twig
@@ -1,4 +1,4 @@
-<form  method="POST" href="{{ path_for('admin.blog.create') }}" enctype="multipart/form-data">
+<form  method="POST" action="{{ path_for('admin.blog.create') }}" enctype="multipart/form-data">
     <div class="mb-3 mt-3">
         <label for="title" class="form-label">Title:</label>
         <input type="text" class="form-control" id="title" name="title" value="">
@@ -23,6 +23,6 @@
         </div>
     </div>
     <div class="form-row mt-5">
-        <button type="submit" class="btn btn-success">Update</button>
+        <button type="submit" class="btn btn-success">Create</button>
     </div>
 </form>
